updated tox config, added test support for django 1.11 too

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,16 @@
 [tox]
-envlist = py27-django{18,19},py35-django19
+envlist =
+    py{34,35,36}-django111,
+    py{35,36,37}-django20,
+    py{35,36,37}-django21,
 
 [testenv]
 usedevelop = True
 deps =
-    django18: Django>=1.8,<1.9
-    django19: Django>=1.9,<1.10
-    -r test_requirements.txt
+    coverage>=4.0
+    djangorestframework~=3.8
+    django111: django~=1.11
+    django20: django~=2.0
+    django21: django~=2.1b1
 commands = python manage.py test
 
